--- a/css/style.css
+++ b/css/style.css
@@ -233,9 +233,14 @@ h4.skillheader {
 	padding-top: 15%;
 }
 
+#name {
+	font-size: 5em;
+}
+
 #clouds{
 	padding: 200px 0;
 	color: black;
+	background-color: #39bfe2;
 }
 
 /*Time to finalise the cloud shape*/
@@ -273,9 +278,9 @@ h4.skillheader {
 
 /*Time to animate*/
 .x1 {
-	-webkit-animation: moveclouds 15s linear infinite;
-	-moz-animation: moveclouds 15s linear infinite;
-	-o-animation: moveclouds 15s linear infinite;
+	-webkit-animation: moveclouds 65s linear infinite;
+	-moz-animation: moveclouds 65s linear infinite;
+	-o-animation: moveclouds 65s linear infinite;
 }
 
 /*variable speed, opacity, and position of clouds for realistic effect*/
@@ -284,8 +289,8 @@ h4.skillheader {
 	
 	-webkit-transform: scale(0.6);
 	-moz-transform: scale(0.6);
-	transform: scale(0.6);
-	opacity: 0.6; /*opacity proportional to the size*/
+	transform: scale(1.3);
+	opacity: 0.8; /*opacity proportional to the size*/
 	
 	/*Speed will also be proportional to the size and opacity*/
 	/*More the speed. Less the time in 's' = seconds*/
@@ -297,12 +302,12 @@ h4.skillheader {
 }
 
 .x3 {
-	left: -250px; top: -200px;
+	left: -250px; top: -400px;
 	
 	-webkit-transform: scale(0.8);
 	-moz-transform: scale(0.8);
-	transform: scale(0.8);
-	opacity: 0.8; /*opacity proportional to the size*/
+	transform: scale(1.3);
+	opacity: 1.0; /*opacity proportional to the size*/
 	
 	-webkit-animation: moveclouds 45s linear infinite;
 	-moz-animation: moveclouds 45s linear infinite;
@@ -312,25 +317,90 @@ h4.skillheader {
 }
 
 .x4 {
-	left: 470px; top: -250px;
+	left: 470px; top: -450px;
 	
 	-webkit-transform: scale(0.75);
 	-moz-transform: scale(0.75);
-	transform: scale(0.75);
+	transform: scale(1.35);
 	opacity: 0.75; /*opacity proportional to the size*/
+	
+	-webkit-animation: moveclouds 65s linear infinite;
+	-moz-animation: moveclouds 65s linear infinite;
+	-o-animation: moveclouds 65s linear infinite;
+}
+
+.x5 {
+	left: -150px; top: -250px;
+	
+	-webkit-transform: scale(0.8);
+	-moz-transform: scale(0.8);
+	transform: scale(1.8);
+	opacity: 0.8; /*opacity proportional to the size*/
 	
 	-webkit-animation: moveclouds 45s linear infinite;
 	-moz-animation: moveclouds 45s linear infinite;
 	-o-animation: moveclouds 45s linear infinite;
 }
 
-.x5 {
-	left: -150px; top: -150px;
+.x6 {
+	left: -150px; top: -500px;
+	
+	-webkit-transform: scale(0.8);
+	-moz-transform: scale(0.8);
+	transform: scale(1.8);
+	opacity: 0.8; /*opacity proportional to the size*/
+	
+	-webkit-animation: moveclouds 65s linear infinite;
+	-moz-animation: moveclouds 65s linear infinite;
+	-o-animation: moveclouds 65s linear infinite;
+}
+
+.x7 {
+	left: -150px; top: -450px;
+	
+	-webkit-transform: scale(0.8);
+	-moz-transform: scale(0.8);
+	transform: scale(1.0);
+	opacity: 1.2; /*opacity proportional to the size*/
+	
+	-webkit-animation: moveclouds 40s linear infinite;
+	-moz-animation: moveclouds 40s linear infinite;
+	-o-animation: moveclouds 40s linear infinite;
+}
+
+.x8 {
+	left: -150px; top: 150px;
+	
+	-webkit-transform: scale(0.8);
+	-moz-transform: scale(0.8);
+	transform: scale(1.5);
+	opacity: 2.0; /*opacity proportional to the size*/
+	
+	-webkit-animation: moveclouds 45s linear infinite;
+	-moz-animation: moveclouds 45s linear infinite;
+	-o-animation: moveclouds 45s linear infinite;
+}
+
+.x9 {
+	left: -150px; top: -190px;
 	
 	-webkit-transform: scale(0.8);
 	-moz-transform: scale(0.8);
 	transform: scale(0.8);
-	opacity: 0.8; /*opacity proportional to the size*/
+	opacity: 1.2; /*opacity proportional to the size*/
+	
+	-webkit-animation: moveclouds 45s linear infinite;
+	-moz-animation: moveclouds 45s linear infinite;
+	-o-animation: moveclouds 45s linear infinite;
+}
+
+.x10 {
+	left: -150px; top: -350px;
+	
+	-webkit-transform: scale(0.8);
+	-moz-transform: scale(0.8);
+	transform: scale(2.0);
+	opacity: 1.0; /*opacity proportional to the size*/
 	
 	-webkit-animation: moveclouds 45s linear infinite;
 	-moz-animation: moveclouds 45s linear infinite;
@@ -348,4 +418,28 @@ h4.skillheader {
 @-o-keyframes moveclouds {
 	0% {margin-left: 1000px;}
 	100% {margin-left: -1000px;}
+}
+
+.plane {
+	-webkit-transform: scale(0.3);
+	-moz-transform: scale(0.3);
+	transform: scale(0.3);
+	opacity: 1.0;
+	
+	-webkit-animation: moveplane 15s linear infinite;
+	-moz-animation: moveplane 15s linear infinite;
+	-o-animation: moveplane 15s linear infinite;
+}
+
+@-webkit-keyframes moveplane {
+	0% {margin-left: 1000px;}
+	100% {margin-left: -800px;}
+}
+@-moz-keyframes moveplane {
+	0% {margin-left: 1000px;}
+	100% {margin-left: 1000px;}
+}
+@-o-keyframes moveplane {
+	0% {margin-left: 1000px;}
+	100% {margin-left: 1000px;}
 }
